--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "framer-motion": "^11.14.4",
     "jotai": "^2.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "yup": "^1.5.0"
   },
